Latest:
------
 ChangeLog last updated: r1640 2004-11-16
 Cumulative changes since last tarball.
 For even more detail, use "svn log" and "svn diff".

0.7.6 (api:77/proto:74)
-----
 * "drbdadm invalidate [res]" was not working correct, while
   "drbdadm invalidate_remote [res]" works. Fixed the former.
 * Make DRBD work on Linux-2.6.10-rc2 and newer: Replaced
   sock_alloc() by sock_create(), replaced TASK_ZOMBIE by 
   EXIT_ZOMBIE.
 * Range checks in drbdadm for all numeric configure parameters.
 * A fix to make ioctl()s work on machines with 64bit kernel space 
   and 32bit user space. 
 * Ioctl()s are only allowed if the caller has CAP_SYS_ADMIN set.
 * Removal of warnings on 64bit architectures.
 * Backport of find_first_bit() for x86_64 aka AMD64 for use on 
   that architecture under Linux-2.4.x
 * Changed drbdadm to do the syncer config before the net config.
 * Changed the way drbdadm determines the minor_count parameter for
   module loading.
 * Improvements to the drbddisk script, to do the right thing
   in case Heartbeat is configured with a small timeout than DRBD.
 * Lots of updates to the way Debian's DRBD packages works.

0.7.5 (api:76/proto:74)
-----
 * Fix a bug that could case read requests to return wrong data
   on a node in Primary/SyncTaget state. (A very unlikely race,
   it is not known that this ever triggered; It was found by an 
   ASSERTION in the code)
 * Removed the 30MB/sec speeding limit for the syncer. (this was 
   intended as a debugging aid, but it was not removed in time)
 * A fix to drbdsetup, to make drbdadm adjust work if a resource
   is diskless.
 * Got rid of the compiler warning when build on a kernel with
   CONFIG_LBD not set.
 * Now the device nodes are created with sane permissions.
 * The debian package is now named "drbd0.7"
 * set_fs() is now also done for sendpage()
 * Better compatibility with early 2.4.x kernels (BH_Launder, min()/max())
 * Touch /var/lock/subsys/drbd, needed for RedHat based distros.